--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ asyncio
 asyncpg==0.20.1
 psycopg2-binary
 celery
-databases[postgresql]==0.3.2
+# databases[postgresql]==0.3.2
 email-validator
 emails
 fastapi
