--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,49 +4,32 @@ services:
   psql:
     build: 
       context: ./db
-      dockerfile: Dockerfile
-    # restart: always
-    secrets:
-      - psql_user
-      - psql_password
+      dockerfile: ../psql.Dockerfile
     volumes: 
       - psql-data:/var/lib/postgresql/data
     expose:
       - 5432
+    env_file:
+      - .env
     networks: 
       - backend
-    environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/psql_password
-      POSTGRES_USER_FILE: /run/secrets/psql_user
-      POSTGRES_DB: lrnfast
 
   app: 
     build: 
       context: ./backend
-      dockerfile: Dockerfile
-    
-    # command: bash -c "while true; do sleep 1; done"  # Infinite loop to keep container live doing nothing
+      dockerfile: ../app.Dockerfile
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
-
     volumes: 
       - ./backend:/usr/src/app
-    secrets:
-      - psql_password
     ports: 
       - 8000:8000
     env_file:
-      - ./backend/.env
+      - .env
     networks: 
       - backend
       - frontend
     depends_on:
       - psql
-
-secrets:
-  psql_user:
-    file: ./db/psql_user.txt
-  psql_password:
-    file: ./db/psql_password.txt
 
 networks:
   frontend:
