--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,23 +1,23 @@
-alembic
-async-exit-stack
-async-generator
-asyncio
+alembic==1.4.2
+async-exit-stack==1.0.1
+async-generator==1.10
+asyncio==3.4.3
 asyncpg==0.20.1
-psycopg2-binary
-celery
+psycopg2-binary==2.8.5
+celery==4.4.5
 # databases[postgresql]==0.3.2
-email-validator
-emails
-fastapi
-passlib[bcrypt]
-pydantic
-pyjwt
-python-dotenv
-python-multipart
-raven
-requests
-sqlalchemy
-starlette==0.13.2
-tenacity
-uvicorn
-vulture
+email-validator==1.1.1
+emails==0.5.15
+fastapi==0.57.0
+passlib[bcrypt]==1.7.2
+pydantic==1.5.1
+pyjwt==1.7.1
+python-dotenv==0.13.0
+python-jose[cryptography]==3.1.0
+python-multipart==0.0.5
+raven==6.10.0
+requests==2.23.0
+sqlalchemy==1.3.17
+starlette==0.13.4
+tenacity==6.2.0
+uvicorn==0.11.5
